# cb-lab

./: .gitignore  .mypy.ini  DEVELOPMENT.md  README.md  format_code.py  pyproject.toml  requirements.txt  setup.py
benchmarks/: test_scalability.py
cb_lab/: __init__.py  exceptions.py
cb_lab/attention/: __init__.py  dense_attention.py  mask_utils.py  paged_attention.py  ragged_attention.py
cb_lab/core/: __init__.py  batch_builder.py  constants.py  kv_cache.py  request.py  scheduler.py
cb_lab/model/: __init__.py  tiny_llm.py
cb_lab/monitoring/: memory_profiler.py  metrics.py
cb_lab/plugins/: base.py  builtin.py
demos/: __init__.py  demo_paged_attention.py  demo_prefill_decode_mix.py  demo_prefill_only.py  demo_ragged_mask.py  demo_scheduler_timeline.py  interactive_demo.py  visualization_demo.py
docs/: api_reference.md  architecture.md  architecture_zh.md  continuous_batching.md  continuous_batching_zh.md  get_started.md  get_started_zh.md  interview_questions.md  interview_questions_zh.md  learning_plan.md  learning_plan_zh.md  principle_recipes.md  principle_recipes_zh.md
docs/learning_materials/: phase0_setup.md  phase0_setup_zh.md  phase1_prefill.md  phase1_prefill_zh.md  phase2_ragged.md  phase2_ragged_zh.md  phase3_mix.md  phase3_mix_zh.md  phase4_timeline.md  phase4_timeline_zh.md  phase5_kv.md  phase5_kv_zh.md  phase6_attention.md  phase6_attention_zh.md  phase7_tests.md  phase7_tests_zh.md  phase8_exploration.md  phase8_exploration_zh.md
tests/: conftest.py  test_integration.py  test_kv_cache.py  test_mask.py  test_paged_attention.py  test_ragged_batching.py  test_scheduler.py
