[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cb-lab"
dynamic = ["version"]
description = "A tiny learning framework for continuous batching inference"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "cb-lab Educational Framework Team", email = "contact@cb-lab.org"},
]
maintainers = [
    {name = "cb-lab Educational Framework Team", email = "contact@cb-lab.org"},
]
keywords = [
    "machine learning",
    "deep learning",
    "transformers",
    "continuous batching",
    "inference",
    "educational",
    "llm",
    "attention",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
monitoring = [
    "matplotlib>=3.3.0",
    "psutil>=5.8.0",
]
visualization = [
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
]
benchmarking = [
    "matplotlib>=3.3.0",
    "numpy>=1.21.0",
]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.900",
    "pre-commit>=2.0.0",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "matplotlib>=3.3.0",
    "psutil>=5.8.0",
]
all = [
    "cb-lab[monitoring,visualization,benchmarking,dev]",
]

[project.scripts]
cb-lab-demo = "demos.interactive_demo:main"
cb-lab-viz = "demos.visualization_demo:run_visualization_demo"
cb-lab-bench = "benchmarks.test_scalability:run_comprehensive_benchmarks"

[project.urls]
Homepage = "https://github.com/your-org/cb-lab"
Documentation = "https://cb-lab.readthedocs.io/"
Repository = "https://github.com/your-org/cb-lab"
"Bug Tracker" = "https://github.com/your-org/cb-lab/issues"
Changelog = "https://github.com/your-org/cb-lab/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["cb_lab", "cb_lab.core", "cb_lab.attention", "cb_lab.model", "cb_lab.monitoring"]

[tool.setuptools.package-data]
cb_lab = ["py.typed"]

[tool.setuptools_scm]
write_to = "cb_lab/_version.py"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "psutil.*",
    "seaborn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "benchmark: marks tests as benchmarks",
]

[tool.coverage.run]
source = ["cb_lab"]
omit = [
    "*/tests/*",
    "*/demos/*",
    "*/benchmarks/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
]